# daz-web-extract

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run  run_cli.py
src/daz_web_extract/: __init__.py  content.py  content_test.py  extract.py  extract_test.py  fetch_http.py  fetch_http_test.py  fetch_playwright.py  fetch_playwright_test.py  fetch_trafilatura.py  fetch_trafilatura_test.py  result.py  result_test.py
