[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daz-web-extract"
version = "0.3.0"
description = "Async web content extraction library with three-tier fetch strategy"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Darren Oakey", email = "darren@oakey.net"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.0",
    "lxml>=6.0.0",
    "trafilatura>=1.6.0",
    "playwright>=1.40.0",
    "setproctitle>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/darrenoakey/daz-web-extract"
Repository = "https://github.com/darrenoakey/daz-web-extract"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]

[tool.ruff]
line-length = 120
